add endpoints for show subscriptions and subscribers